--- a/index.html
+++ b/index.html
@@ -49,12 +49,26 @@
                   </li>
                   <li class="list-group-item bg-dark">
                     <button id="filter-btn" type="button" class="btn btn-dark">
-                      Filter Table
-                    </button>
-                  </li>
-                </ul>
-              </form>
-          </div>
+                    </li> -->
+                </li>
+                <li class = "list-group-item bg-dark">
+                <label for="city">Enter City</label>
+                  <input type="text" placeholder="mason" id="city" />
+                </li>
+
+                <li class = "list-group-item bg-dark">
+                <label for="state">Enter State</label>
+                  <input type="text" placeholder="oh" id= "state" />
+                </li>
+
+                <li class = "list-group-item bg-dark">
+                <label for="country">Enter Country</label>
+                  <input type="text" placeholder="us" id="country" />
+                </li>
+
+                <li class = "list-group-item bg-dark">
+                <label for="shape">Enter Shape</label>
+                  <input type="text" placeholder="circle" id="shape" />
           <div class="col-md-9">
             <table class="table table-striped">
                 <thead>
@@ -75,6 +89,6 @@
       </div>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.11.0/d3.js"></script>
     <script src="static/js/data.js"></script>
-    <script src="static/js/app.js"></script>
+    <script src="static/js/app_1.js"></script>
 </body>
 </html>
