--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
       integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="static/css/style.css" />
+    <link rel="stylesheet" href="static/css/style2.css/images">
   </head>
-  <body>
+  <body class="bg-dark">
     <div class="wrapper">
-        <nav class="navbar navbar-expand-lg">
+        <nav class="navbar navbar-dark bg-dark navbar-expand-lg">
             <a class="navbar-brand" href="index.html">UFO Sightings</a>
         </nav>
         <div class="jumbotron">
@@ -35,40 +35,47 @@
                 </div>
             </div>
         </div>
-
     </div>
     <div class="container-fluid">
         <div class="row">
           <div class="col-md-3">
             <form class="bg-dark">
                 <p>Filter Search</p>
+
                 <ul class="list-group">
                   <li class="list-group-item bg-dark">
                     <label for="datetime">Enter Date</label>
                     <input type="text" placeholder="1/10/2010" id="datetime" />
                   </li>
+
                   <li class="list-group-item bg-dark">
-                    <button id="filter-btn" type="button" class="btn btn-dark">
-                    </li> -->
-                </li>
+                      <label for="city">Enter City</label>
+                      <input type="text" placehoulder="ar" id="city" />
+
+               </li> -->
+                
                 <li class = "list-group-item bg-dark">
-                <label for="city">Enter City</label>
-                  <input type="text" placeholder="mason" id="city" />
+                    <label for="city">Enter City</label>
+                    <input type="text" placeholder="mason" id="state" />
                 </li>
 
                 <li class = "list-group-item bg-dark">
-                <label for="state">Enter State</label>
+                  <label for="state">Enter State</label>
                   <input type="text" placeholder="oh" id= "state" />
                 </li>
 
                 <li class = "list-group-item bg-dark">
-                <label for="country">Enter Country</label>
-                  <input type="text" placeholder="us" id="country" />
+                    <label for="country">Enter Country</label>
+                    <input type="text" placeholder="us" id="country" />
                 </li>
 
                 <li class = "list-group-item bg-dark">
-                <label for="shape">Enter Shape</label>
-                  <input type="text" placeholder="circle" id="shape" />
+                    <label for="shape">Enter Shape</label>
+                    <input type="text" placeholder="circle" id="shape" />
+                  </li>
+                </ul>
+            </form>
+          </div>  
           <div class="col-md-9">
             <table class="table table-striped">
                 <thead>
